--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 		/>
-		<link href="./static/css/main.2ae47eeb.chunk.css" rel="stylesheet" />
+		<link href="/static/css/main.2ae47eeb.chunk.css" rel="stylesheet" />
 		<title>Rick and Morty API</title>
+		<base href="https://takotorayata.github.io/rickandmortyapi/">
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
