--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 		/>
 		<link href="./static/css/main.2ae47eeb.chunk.css" rel="stylesheet" />
+		<link href="../css/index.css" rel="stylesheet" />
 		<title>Rick and Morty API</title>
 	</head>
 	<body>
