--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,10 @@
 			name="description"
 			content="Web site created using create-react-app"
 		/>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-		/>
 		<link href="./static/css/main.2ae47eeb.chunk.css" rel="stylesheet" />
-		<link href="../css/index.css" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+                <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+                <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 		<title>Rick and Morty API</title>
 	</head>
 	<body>
